# fu-alpha-research

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
configs/: futures.yaml
docs/: factor_evaluation_framework.md  migration_design.md
references/futures/: factor_acceptance_standards.json  factor_catalog.csv  new1000_mlp_old1144_shuffle_summary.json  new1000_ridge_mlp_summary.json  old_effective_factors_summary.json  round2_effective_factors_summary.json  scorecard_strict_factors_summary.json  selected_factors.txt
reports/: factor_effectiveness_validation.md  final_factor_mining_report.md  migration_report.md
scripts/: aggregate_expression_factors.py  aggregate_prediction_stats.py  build_effectiveness_validation_report.py  build_final_report.py  compute_expression_ic_part.py  compute_ic_part.py  evaluate_expression_scorecard.py  fit_mlp_suite.py  fit_model_suite.py  fit_ridge_model.py  generate_expression_candidates.py  predict_mlp_suite_month.py  predict_model_suite_month.py  predict_ridge_month.py  prefilter_expression_sample_ic.py  run_continuous_factor_mining.py  run_futures_pipeline.py  run_prediction_suite_oos.py  sample_feature_month.py  sample_mlp_feature_month.py  sample_month.py  summarize_ic_suite.py  summarize_model_suite.py  summarize_prediction_month.py  summarize_prediction_parts.py  validate_mlp_factor_effectiveness.py  validate_model_factor_effectiveness.py  write_feature_sets.py  write_model_feature_sets.py
src/fu_alpha_research/: __init__.py  build_panel.py  cli.py  config.py  (+14 more)
tests/: test_factor_spec.py  test_metrics.py
