[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fu-alpha-research"
version = "0.1.0"
description = "Local China futures alpha mining, IS/OOS evaluation, and baseline modeling."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "scikit-learn",
  "lightgbm",
  "scipy",
]

[project.scripts]
fu-alpha = "fu_alpha_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
